--- a/code/ENVS-193DS_homework-03.qmd
+++ b/code/ENVS-193DS_homework-03.qmd
@@ -7,7 +7,19 @@ format: html
 GitHub repository: https://rebeccalmartinez.github.io/ENVS-193DS_homework-03/
 
 
-```{r}
+```{r setup}
+
+#| label: setup
+#| include: false
+#| message: false
+
+# Loading packages
+library(tidyverse)
+library(here)
+library(flextable)
+library(janitor)
+
+service_data <- read_csv(here("data", "service_data.csv"))
 
 ```
 
