--- a/code/ENVS-193DS_homework-03.qmd
+++ b/code/ENVS-193DS_homework-03.qmd
@@ -24,3 +24,10 @@ service_data <- read_csv(here("data", "service_data.csv"))
 ```
 
 
+## Part 2. Problems
+
+### Problem 1. Personal data 
+
+#### a. Data summarizing 
+
+I could count the number of service calls where help was or wasn’t needed, grouped by whether the light was working or broken. Comparing these groups is informative because a broken light might influence whether guests mistakenly request help.
