--- a/code/ENVS-193DS_homework-03.qmd
+++ b/code/ENVS-193DS_homework-03.qmd
@@ -107,3 +107,11 @@ ggplot(clean_service_data, aes(x = working, fill = help)) +
 
 ```
 
+
+#### c. Caption
+
+_Figure 1. False service calls were more common when the light was broken._
+Stacked bars show the number of service calls under each light condition (Working vs. Broken), split by whether help was actually needed (green) or not (red). Out of 49 broken service lights, 45 did not require help and only 4 did. Out of 43 working service lights, 32 did not require help and 11 did. An additional 16 cases had unknown light status (and are not shown in the figure (gray).
+
+
+
