--- a/code/ENVS-193DS_homework-03.qmd
+++ b/code/ENVS-193DS_homework-03.qmd
@@ -9,7 +9,7 @@ GitHub repository: https://rebeccalmartinez.github.io/ENVS-193DS_homework-03/
 
 ```{r setup}
 
-#| label: setup
+#| warning: false
 #| include: false
 #| message: false
 
