--- a/code/ENVS-193DS_homework-03.qmd
+++ b/code/ENVS-193DS_homework-03.qmd
@@ -2,6 +2,7 @@
 title: "Homework 3"
 subtitle: "ENVS-193DS"
 author: "Rebecca Martinez"
+date: "May 28, 2025"
 format: html
 ---
 
@@ -379,13 +380,11 @@ The study includes linear mixed models with the decay constant (k) as the respon
 
 ![](../images/fig4-bioturbation.png)
 
-#### b. Visual clarity (10 points)
+#### b. Visual clarity
 The figure is generally clear. The x-axis represents cumulative litter mass remaining (%) and the y-axis shows nitrogen concentration (%N), with regression lines displayed for each treatment. The authors include R² values for each line, though the actual regression statistics are not provided in the caption—instead, readers are directed to a separate table. Data points and regression lines are overlaid effectively, and the use of faceting by litter type helps isolate trends.
 
 
-#### c. 
-
-c. Aesthetic clarity (10 points)
+#### c. Aesthetic clarity
 The authors managed visual clutter reasonably well. Faceting helps separate the litter types clearly, and colors are used consistently to distinguish between surface and buried litter. However, some overlapping data points make it difficult to assess point density. A slight increase in transparency could better represent clustering without adding visual noise.
 
 
