moved images to images folder and fixed code to reflect

--- a/code/ENVS-193DS_homework-03.qmd
+++ b/code/ENVS-193DS_homework-03.qmd
@@ -365,7 +365,7 @@ animate(
 
 ```
 
-![Total Service Calls](../blinking_lights.gif)
+![Total Service Calls](../images/blinking_lights.gif)
 
 #### d. Write an artist statement.
 
